--- a/app/styles/_settings.scss
+++ b/app/styles/_settings.scss
@@ -1,19 +1,40 @@
 // Colors
-
+$black: #212020;
+$white: #FFFFFF;
+$mexican-pink: #FF0060;
+$pale-blue: #F5F7F9;
+$dark-grey: #2f2f2f;
 // Fonts
+$heading-font-family: "bebas-neue", sans-serif;
+$heading-font-color: $black;
+
+$h1-font-size: rem(64);
+$h2-font-size: rem(44);
+$h3-font-size: rem(35);
+$h4-font-size: rem(23);
 
 // General Settings
+$base-font-family: "proxima-nova", Helvetica, Arial, sans-serif;
+$base-font-size: rem(15);
+$base-line-height: 1.7;
+
+$base-bg-color: $white;
+$base-font-color: $dark-grey;
+
+$inverse-bg-color: $black;
+$inverse-font-color: $white;
 
 // Borders
 
 // Links and Buttons
 
 // App Palette
-
 // Margins
-
+$small-margin: rem(18);
+$medium-margin: rem(32);
+$large-margin: rem(80);
 // Sizes
-
+$max-width: rem(1136);
 // Breakpoints
 
 // Media Queries
