--- a/app/styles/_base.scss
+++ b/app/styles/_base.scss
@@ -32,3 +32,18 @@ h2 {
 h3 {
   font-size: $h3-font-size;
 }
+
+a {
+  color: $link-font-color;
+  text-decoration: none;
+}
+
+nav > ul {
+  display: flex;
+  list-style: none;
+  padding: 0;
+
+  & > li {
+    list-style: none;
+  }
+}
