--- a/app/styles/_settings.scss
+++ b/app/styles/_settings.scss
@@ -4,6 +4,8 @@ $white: #FFFFFF;
 $mexican-pink: #FF0060;
 $pale-blue: #F5F7F9;
 $dark-grey: #2f2f2f;
+$gold-yellow: #efa600;
+
 // Fonts
 $heading-font-family: "bebas-neue", sans-serif;
 $heading-font-color: $black;
@@ -27,7 +29,7 @@ $inverse-font-color: $white;
 // Borders
 
 // Links and Buttons
-
+$link-font-color: $gold-yellow;
 // App Palette
 // Margins
 $small-margin: rem(18);
@@ -35,6 +37,7 @@ $medium-margin: rem(32);
 $large-margin: rem(80);
 // Sizes
 $max-width: rem(1136);
+$footer-height: 10vh;
 // Breakpoints
 
 // Media Queries
