--- a/app/styles/layout/_footer.scss
+++ b/app/styles/layout/_footer.scss
@@ -1,6 +1,5 @@
 .l-footer {
-  position: absolute;
-  bottom: 0;
+  position: relative;
   left: 0;
   right: 0;
   background-color: $inverse-bg-color;
