--- a/app/scripts/components/Header/header-style.scss
+++ b/app/scripts/components/Header/header-style.scss
@@ -1,2 +1,9 @@
+// Import global variables
+@import '../../../styles/variables';
+
 .c-header{
+  padding: $medium-margin;
+  a {
+    color: inherit;
+  }
 }
