landing page first approach

--- a/app/scripts/components/Footer/footer-style.scss
+++ b/app/scripts/components/Footer/footer-style.scss
@@ -1,5 +1,5 @@
 // Import Global Variables
-@import '../../../styles/variables.scss';
+@import '../../../styles/variables';
 
 .c-footer {
   padding: $small-margin;
