--- a/app/scripts/components/Header/header-template.html
+++ b/app/scripts/components/Header/header-template.html
@@ -1,10 +1,10 @@
 <div class="c-header">
   <div class="row align-top">
-    <div class="columns small-2">
+    <div class="columns small-6 medium-2">
       <router-link to="/">Data<br>4SDGS<br>HIGH-<br>WAY</router-link>
     </div>
 
-    <div class="columns small-6 small-offset-4">
+    <div class="columns small-6 medium-6 medium-offset-4">
       <nav>
         <ul>
           <li>
