--- a/app/scripts/components/Footer/footer-template.html
+++ b/app/scripts/components/Footer/footer-template.html
@@ -1,9 +1,9 @@
 <div class="c-footer">
   <div class="row">
-    <div class="columns small-2">
+    <div class="columns small-6 medium-2">
       <img :src="logoGlobalSDD" class="footer-logo">
     </div>
-    <div class="columns small-2 large-offset-8">
+    <div class="columns small-6 medium-2 medium-offset-8">
       <img :src="logoVizz" class="footer-logo">
     </div>
   </div>
