--- a/app/styles/_base.scss
+++ b/app/styles/_base.scss
@@ -19,6 +19,8 @@ body {
 h1, h2, h3 {
   font-family: $heading-font-family;
   color: $heading-font-color;
+  line-height: 1.2;
+  margin: 0.5rem;
 }
 
 h1 {
@@ -45,5 +47,12 @@ nav > ul {
 
   & > li {
     list-style: none;
+    margin: 0 10px;
   }
 }
+
+p {
+  margin-top: 0;
+  margin-bottom: 1rem;
+}
+
