--- a/app/styles/_settings.scss
+++ b/app/styles/_settings.scss
@@ -1,10 +1,12 @@
 // Colors
 $black: #212020;
 $white: #FFFFFF;
-$mexican-pink: #FF0060;
-$pale-blue: #F5F7F9;
-$dark-grey: #2f2f2f;
-$gold-yellow: #efa600;
+$mexican-pink: #FF0065;
+$dark-grey: #2F2F2F;
+$gold-yellow: #EFA600;
+$grey: #F3F3F3;
+
+$pink-bg: linear-gradient(to bottom, #ff0064, #ff0085);
 
 // Fonts
 $heading-font-family: "bebas-neue", sans-serif;
@@ -17,7 +19,7 @@ $h4-font-size: rem(23);
 
 // General Settings
 $base-font-family: "proxima-nova", Helvetica, Arial, sans-serif;
-$base-font-size: rem(15);
+$base-font-size: rem(18);
 $base-line-height: 1.7;
 
 $base-bg-color: $white;
@@ -27,14 +29,20 @@ $inverse-bg-color: $black;
 $inverse-font-color: $white;
 
 // Borders
-
+$border-1: solid 2px $grey;
 // Links and Buttons
 $link-font-color: $gold-yellow;
+
 // App Palette
+$primary-color: $dark-grey;
+$secondary-color: $mexican-pink;
+$third-color: $grey;
+
 // Margins
-$small-margin: rem(18);
-$medium-margin: rem(32);
-$large-margin: rem(80);
+$small-margin: 18px;
+$medium-margin: 32px;
+$large-margin: 80px;
+
 // Sizes
 $max-width: rem(1136);
 $footer-height: 10vh;
