adds new component button

--- a/app/scripts/components/Article/article-style.scss
+++ b/app/scripts/components/Article/article-style.scss
@@ -11,6 +11,10 @@
   &.-split {
     padding: 0;
 
+    p {
+      margin-bottom: $large-margin;
+    }
+
     .row {
       max-width: none;
     }
