--- a/app/scripts/components/Home/home-template.html
+++ b/app/scripts/components/Home/home-template.html
@@ -12,16 +12,25 @@
   </article-component>
 
   <article-component split>
+
     <div slot="left-panel">
       <h1>Playbook</h1>
-      <p>Learn how to turn your SDG data into data services and
-        make it available to millions of software developers.</p>
+      <p>
+        Learn how to turn your SDG data into data services and
+        make it available to millions of software developers.
+      </p>
+      <button-component>Read Playbook</button-component>
     </div>
+
     <div slot="right-panel">
       <h1>Shared, Open Software</h1>
-      <p>All software used in the making of the developer playground is open source
-        and available online. Take a look and if you want, contribute!</p>
+      <p>
+        All software used in the making of the developer playground is open source
+        and available online. Take a look and if you want, contribute!
+      </p>
+      <button-component>Source Code</button-component>
     </div>
+
   </article-component>
 
   <article-component class="-fourth">
