update app palette

--- a/app/scripts/components/Button/button-style.scss
+++ b/app/scripts/components/Button/button-style.scss
@@ -3,7 +3,7 @@
 
 .c-button {
   font-size: $font-size-small;
-  background-color: $secondary-color;
+  background-color: $theme-support;
   color: $button-font-color;
   text-transform: uppercase;
   padding: $small-margin $medium-margin;
