--- a/app/scripts/components/Article/article-style.scss
+++ b/app/scripts/components/Article/article-style.scss
@@ -5,7 +5,7 @@
   padding: $medium-margin 0;
 
   &.-fourth {
-    background-color: $third-color;
+    background-color: $theme-complementary;
   }
 
   &.-split {
