--- a/app/styles/_settings.scss
+++ b/app/styles/_settings.scss
@@ -21,28 +21,30 @@ $h4-font-size: rem(23);
 $font-size-normal: rem(18);
 $font-size-small: rem(13);
 
+// App Palette
+$theme-base: $white;
+$theme-complementary: $grey;
+$theme-accent: $mexican-pink;
+$theme-support: $black;
+
+
 // General Settings
 $base-font-family: "proxima-nova", Helvetica, Arial, sans-serif;
 $base-font-size: $font-size-normal;
 $base-line-height: 1.7;
 
-$base-bg-color: $white;
+$base-bg-color: $theme-base;
 $base-font-color: $dark-grey;
 
 $inverse-bg-color: $grayed-black;
-$inverse-font-color: $white;
+$inverse-font-color: $theme-base;
 
-$button-font-color: $white;
+$button-font-color: $theme-base;
 
 // Borders
 $border-1: solid 2px $grey;
 // Links and Buttons
 $link-font-color: $gold-yellow;
-
-// App Palette
-$primary-color: $mexican-pink;
-$secondary-color: $black;
-$third-color: $grey;
 
 // Margins
 $small-margin: 18px;
