--- a/app/styles/layout/_footer.scss
+++ b/app/styles/layout/_footer.scss
@@ -2,6 +2,6 @@
   position: relative;
   left: 0;
   right: 0;
-  background-color: $inverse-bg-color;
-  color: $inverse-font-color;
+  background-color: $header-bg-color;
+  color: $theme-base;
 }
