--- a/app/styles/layout/_header.scss
+++ b/app/styles/layout/_header.scss
@@ -4,6 +4,6 @@
   right: 0;
   z-index: 1;
 
-  background-color: $inverse-bg-color;
-  color: $inverse-font-color;
+  background-color: $header-bg-color;
+  color: $theme-base;
 }
