--- a/app/scripts/components/Header/header-template.html
+++ b/app/scripts/components/Header/header-template.html
@@ -4,20 +4,14 @@
       <router-link to="/">Data<br>4SDGS<br>HIGH-<br>WAY</router-link>
     </div>
 
-    <div class="columns small-6 medium-6 medium-offset-4">
+    <div class="columns small-6 medium-3 medium-offset-7">
       <nav>
         <ul>
           <li>
-            <router-link to="/playbook">Playbook</router-link>
-          </li>
-          <li>
-            <router-link to="/developer">Developer</router-link>
+            <router-link to="/about">About Us</router-link>
           </li>
           <li>
             <router-link to="/playground">Playground</router-link>
-          </li>
-          <li>
-            <router-link to="/partnership">Software Partnership</router-link>
           </li>
         </ul>
       </nav>
