--- a/app/scripts/components/Home/home-template.html
+++ b/app/scripts/components/Home/home-template.html
@@ -1,46 +1,110 @@
 <div class="c-home">
-  <article-component class="-gradient">
+  <article-component class="about-us">
     <h1>Data4SDGs Developer Playground</h1>
+    <h4>DATA4SDGS GOALS</h4>
 
-    <div class="row align-center">
-      <p class="column small-12 medium-9">
-        Instantly search, refine and get the code to access SDG
-        data for your applications. Code snippets available in all
-        major languages.
-      </p>
-    </div>
-  </article-component>
+    <div class="row">
+      <div class="column small-12 medium-4 info-column">
+        <div class="c-icon"></div>
+        <h3>Improve the effective use of data.</h3>
+        <p>
+          Focus on Lorem ipsum sit amet dolor finius
+          est valentius vincius dolorem valentis.
+        </p>
 
-  <article-component split>
+      </div>
 
-    <div slot="left-panel">
-      <h1>Playbook</h1>
-      <p>
-        Learn how to turn your SDG data into data services and
-        make it available to millions of software developers.
-      </p>
-      <button-component>Read Playbook</button-component>
-    </div>
+      <div class="column small-12 medium-4 info-column">
+        <h3>Increase openness and leverage of existing data.</h3>
+        <p>Focus on Lorem ipsum sit amet dolor finius
+          est valentius vincius dolorem valentis.</p>
+      </div>
 
-    <div slot="right-panel">
-      <h1>Shared, Open Software</h1>
-      <p>
-        All software used in the making of the developer playground is open source
-        and available online. Take a look and if you want, contribute!
-      </p>
-      <button-component>Source Code</button-component>
+      <div class="column small-12 medium-4 info-column">
+        <h3>Visualize your Data towards your brand.</h3>
+        <p>Focus on Lorem ipsum sit amet dolor finius
+          est valentius vincius dolorem valentis.</p>
+      </div>
     </div>
 
   </article-component>
 
-  <article-component class="-fourth">
+  <article-component class="-accent">
+    <div class="row">
+
+      <div class="column small-6 medium-8 align-middle">
+        <h3 class="-light">Start Collecting, Visualising & Monitoring Data the Right way.</h3>
+      </div>
+
+      <div class="c-button-group -center column small-6 medium-4">
+        <button-component class="-bordered -big">Start</button-component>
+      </div>
+
+    </div>
+  </article-component>
+
+  <article-component class="-alternative">
+    <div class="row">
+
+      <div class="column small-12 medium-6 link-column">
+        <h1 class="-clean -left">Playbook</h1>
+        <p class="-clean">
+          Learn how to turn your SDG data into data services and
+          make it available to millions of software developers.
+        </p>
+        <a class="link-column-action">Read Playbook</a>
+      </div>
+
+      <div class="column small-12 medium-6 link-column">
+        <h1 class="-clean -left">shared, open software</h1>
+        <p class="-clean">
+          All software used in the making of the developer playground is open source
+          and available online. Take a look and if you want, contribute!
+        </p>
+        <a class="link-column-action">Source Code</a>
+      </div>
+
+    </div>
+  </article-component>
+
+  <article-component>
+    <swipe class="home-swipe">
+
+      <swipe-item>
+        <h4>What our clients have to say</h4>
+        <div>
+          “Awesome & timely, particularly given this morning's
+          #datarevolution discussion. #TechWomenAfri ca”
+        </div>
+        <span>Twitter user:</span>
+      </swipe-item>
+
+      <swipe-item>
+        <h4>What our clients have to say</h4>
+        <div>
+          “Awesome & timely, particularly given this morning's
+          #datarevolution discussion. #TechWomenAfrica”
+        </div>
+        <span>Twitter user:</span>
+      </swipe-item>
+
+      <swipe-item>
+        <h4>What our clients have to say</h4>
+        <div>
+          “Awesome & timely, particularly given this morning's
+          #datarevolution discussion. #TechWomenAfrica”
+        </div>
+        <span>Twitter user:</span>
+      </swipe-item>
+    </swipe>
+  </article-component>
+
+  <article-component class="-complementary">
     <h1>Partnership</h1>
-
-    <div class="row align-center">
-      <p class="column small-12 medium-9">
-        150+ partners, providing expertise, data, technology,
-        science to meet the data needs of the SDGs. Here they are.
-      </p>
+    <h4 class="-light -center">
+      150+ partners, providing expertise, data, technology,
+      science to meet the data needs of the SDGs. Here they are.
+    </h4>
     </div>
   </article-component>
 </div>
