creates a new slider component

--- a/app/scripts/components/Button/button-style.scss
+++ b/app/scripts/components/Button/button-style.scss
@@ -2,7 +2,7 @@
 @import '../../../styles/variables';
 
 .c-button {
-  font-size: $font-size-small;
+  font-size: $font-size-xsmall;
   text-transform: uppercase;
 
   background-color: transparent;
