--- a/app/styles/_base.scss
+++ b/app/styles/_base.scss
@@ -72,7 +72,7 @@ a {
   color: $link-font-color;
   text-decoration: none;
   text-transform: uppercase;
-  font-size: $font-size-small;
+  font-size: $font-size-xsmall;
   font-weight: $font-weight-bold;
 }
 
