--- a/app/styles/_settings.scss
+++ b/app/styles/_settings.scss
@@ -19,7 +19,8 @@ $h3-font-size: rem(20);
 $h4-font-size: rem(16);
 
 $font-size-normal: rem(18);
-$font-size-small: rem(14);
+$font-size-small: rem(16);
+$font-size-xsmall: rem(14);
 
 $font-weight-normal: 400;
 $font-weight-bold: 700;
