--- a/app/scripts/components/Home/home-template.html
+++ b/app/scripts/components/Home/home-template.html
@@ -4,26 +4,33 @@
     <h4>DATA4SDGS GOALS</h4>
 
     <div class="row">
-      <div class="column small-12 medium-4 info-column">
-        <div class="c-icon"></div>
-        <h3>Improve the effective use of data.</h3>
-        <p>
-          Focus on Lorem ipsum sit amet dolor finius
-          est valentius vincius dolorem valentis.
-        </p>
-
+      <div class="column small-12 medium-6 large-4 info-column">
+        <icon-component class="-normal -base" name="icon-data"></icon-component>
+        <div class="info-column-text">
+          <h3>Improve the effective use of data.</h3>
+          <p>
+            Focus on Lorem ipsum sit amet dolor finius
+            est valentius vincius dolorem valentis.
+          </p>
+        </div>
       </div>
 
-      <div class="column small-12 medium-4 info-column">
-        <h3>Increase openness and leverage of existing data.</h3>
-        <p>Focus on Lorem ipsum sit amet dolor finius
-          est valentius vincius dolorem valentis.</p>
+      <div class="column small-12 medium-6 large-4 info-column">
+        <icon-component class="-normal -base" name="icon-group"></icon-component>
+        <div class="info-column-text">
+          <h3>Increase openness and leverage of existing data.</h3>
+          <p>Focus on Lorem ipsum sit amet dolor finius
+            est valentius vincius dolorem valentis.</p>
+        </div>
       </div>
 
-      <div class="column small-12 medium-4 info-column">
+      <div class="column small-12 medium-6 large-4 info-column">
+        <icon-component class="-normal -base" name="icon-tools"></icon-component>
+        <div class="info-column-text">
         <h3>Visualize your Data towards your brand.</h3>
         <p>Focus on Lorem ipsum sit amet dolor finius
           est valentius vincius dolorem valentis.</p>
+        </div>
       </div>
     </div>
 
