--- a/app/styles/_base.scss
+++ b/app/styles/_base.scss
@@ -88,6 +88,7 @@ nav > ul {
 }
 
 p {
+  font-size: $font-size-small;
   margin-top: 0;
   margin-bottom: $small-margin;
   color: $paragraph-font-color;
