--- a/app/styles/_settings.scss
+++ b/app/styles/_settings.scss
@@ -47,7 +47,7 @@ $paragraph-font-color: $grey;
 $button-font-color: $theme-base;
 
 // Borders
-$border-1: solid 2px $lightgrey;
+$border-1: solid 1px #e0e0e0;
 // Links and Buttons
 $link-font-color: $gold-yellow;
 
