adds behavior to button component + go to playground button

--- a/app/scripts/components/Home/home-template.html
+++ b/app/scripts/components/Home/home-template.html
@@ -44,7 +44,7 @@
       </div>
 
       <div class="c-button-group -center column small-6 medium-4">
-        <button-component class="-bordered -big">Start</button-component>
+        <button-component class="-bordered -big" :click="goToPlayground">Start</button-component>
       </div>
 
     </div>
