--- a/app/scripts/components/Home/home-template.html
+++ b/app/scripts/components/Home/home-template.html
@@ -50,25 +50,29 @@
     </div>
   </article-component>
 
-  <article-component class="-alternative">
-    <div class="row">
+  <article-component class="-alternative -no-padding" grid-row="row expanded" grid-column="small-12">
+    <div class="row expanded">
 
-      <div class="column small-12 medium-6 link-column">
-        <h1 class="-clean -left">Playbook</h1>
-        <p class="-clean">
-          Learn how to turn your SDG data into data services and
-          make it available to millions of software developers.
-        </p>
-        <a class="link-column-action">Read Playbook</a>
+      <div class="column small-12 medium-6 split-view">
+        <div class="link-column">
+          <h1 class="-clean -left">Playbook</h1>
+          <p class="-clean">
+            Learn how to turn your SDG data into data services and
+            make it available to millions of software developers.
+          </p>
+          <a class="link-column-action">Read Playbook</a>
+        </div>
       </div>
 
-      <div class="column small-12 medium-6 link-column">
-        <h1 class="-clean -left">shared, open software</h1>
-        <p class="-clean">
-          All software used in the making of the developer playground is open source
-          and available online. Take a look and if you want, contribute!
-        </p>
-        <a class="link-column-action">Source Code</a>
+      <div class="column small-12 medium-6 split-view">
+        <div class="link-column">
+          <h1 class="-clean -left">shared, open software</h1>
+          <p class="-clean">
+            All software used in the making of the developer playground is open source
+            and available online. Take a look and if you want, contribute!
+          </p>
+          <a class="link-column-action">Source Code</a>
+        </div>
       </div>
 
     </div>
