--- a/app/scripts/components/Article/article-style.scss
+++ b/app/scripts/components/Article/article-style.scss
@@ -17,7 +17,10 @@
   &.-alternative {
     background-color: $theme-alternative;
     color: $theme-base;
+  }
 
+  &.-no-padding {
+    padding: 0;
   }
 
 }
