--- a/app/scripts/components/Article/article-template.html
+++ b/app/scripts/components/Article/article-template.html
@@ -1,7 +1,7 @@
 <article class="c-article">
-  <div class="row align-center">
+  <div :class="grid-row">
 
-    <div class="columns small-12 medium-10">
+    <div :class="grid-column">
       <slot></slot>
     </div>
 
