adds hero component and changes header layout

--- a/app/scripts/components/Header/header-template.html
+++ b/app/scripts/components/Header/header-template.html
@@ -1,7 +1,9 @@
 <div class="c-header">
   <div class="row align-top">
     <div class="columns small-6 medium-2">
-      <router-link to="/">Data<br>4SDGS<br>HIGH-<br>WAY</router-link>
+      <router-link to="/">
+        <img :src="d4sdgLogo">
+      </router-link>
     </div>
 
     <div class="columns small-6 medium-3 medium-offset-7">
