--- a/app/scripts/components/Playground/playground-template.html
+++ b/app/scripts/components/Playground/playground-template.html
@@ -1,5 +1,6 @@
 <div class="c-playground">
-<article-component>
-  <h1 class="-left">Featured Datasets</h1>
-</article-component>
+  <hero-component></hero-component>
+  <article-component>
+    <h1 class="-left">Featured Datasets</h1>
+  </article-component>
 </div>
