add behaviour to hero component

--- a/app/scripts/components/Header/header-template.html
+++ b/app/scripts/components/Header/header-template.html
@@ -1,7 +1,7 @@
 <div class="c-header">
   <div class="row align-top">
     <div class="columns small-6 medium-2">
-      <router-link to="/">
+      <router-link to="/" class="header-logo">
         <img :src="d4sdgLogo">
       </router-link>
     </div>
