--- a/app/scripts/components/Hero/hero-style.scss
+++ b/app/scripts/components/Hero/hero-style.scss
@@ -2,13 +2,23 @@
 @import '../../../styles/variables';
 
 .c-hero {
-  padding-top: 30vh;
+  padding-top: rem(166);
   background-color: $header-bg-color;
   min-height: 45vh;
 
   &.-home {
     background-image: url('/static/layouts/Back.png');
     background-size: cover;
-    height: 75vh;
+
+    .hero-home-content {
+      padding: ($medium-margin * 4) 0;
+    }
+  }
+
+  .hero-app-content {
+    padding: ($medium-margin * 2) 0;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
   }
 }
