work in progress

--- a/app/scripts/components/Article/article-template.html
+++ b/app/scripts/components/Article/article-template.html
@@ -1,7 +1,7 @@
 <article class="c-article">
-  <div :class="grid-row">
+  <div :class="gridRow">
 
-    <div :class="grid-column">
+    <div :class="gridColumn">
       <slot></slot>
     </div>
 
