dropdown component + first approach of search component

--- a/app/scripts/components/Hero/hero-template.html
+++ b/app/scripts/components/Hero/hero-template.html
@@ -11,8 +11,7 @@
 
   <div class="row align-center">
     <div class="column small-8 hero-app-content" v-if="!location.home">
-      <input type="search">
-      <button-component class="-filled -small">Search</button-component>
+      <search-component></search-component>
     </div>
   </div>
 
