dropdown and search bar basic behaviour

--- a/app/scripts/components/Dropdown/dropdown-style.scss
+++ b/app/scripts/components/Dropdown/dropdown-style.scss
@@ -19,9 +19,10 @@
 
     .dropdown-list-item {
       padding: 0 $small-margin;
+      text-transform: uppercase;
 
       &:hover {
-        background-color: lightgrey;
+        background-color: $lightgrey;
         cursor: pointer;
       }
     }
