--- a/app/scripts/components/Dropdown/dropdown-template.html
+++ b/app/scripts/components/Dropdown/dropdown-template.html
@@ -1,6 +1,6 @@
 <div class="c-dropdown">
-  <button-component class="-bordered dropdown-button" :click="showItems">WRI</button-component>
-  <ul class="dropdown-list" v-if="open">
-    <li v-for="item in items" class="dropdown-list-item">{{item}}</li>
+  <button-component class="-bordered dropdown-button" :click="toggleVisibility">{{selected || 'Filter'}}</button-component>
+  <ul class="dropdown-list" v-show="open">
+    <li v-for="(item, index) in items" class="dropdown-list-item" @click="selectItem(index)">{{item}}</li>
   </ul>
 </div>
