--- a/app/scripts/components/Search/search-style.scss
+++ b/app/scripts/components/Search/search-style.scss
@@ -7,10 +7,35 @@
   justify-content: space-around;
 
   .search-bar {
-    width: 600px;
     height: 60px;
-    padding: 0;
-    border-radius: 2px;
-    border: 0;
+    width: 600px;
+
+    .search-input {
+      height: 100%;
+      width: 100%;
+      padding: 0 $small-margin;
+      border-radius: 2px 2px 0 0;
+      border: 0;
+    }
+
+    .search-results-list {
+      width: 100%;
+      margin: 0;
+      padding: 0;
+      border-radius: 0 0 2px 2px;
+
+      background-color: $lightgrey;
+
+      list-style: none;
+      cursor: pointer;
+
+      .search-results-item {
+        padding:  0 $small-margin;
+
+        &:hover {
+          background-color: grey;
+        }
+      }
+    }
   }
 }
