--- a/app/scripts/components/Search/search-template.html
+++ b/app/scripts/components/Search/search-template.html
@@ -1,8 +1,15 @@
-<div class="c-search row">
+<div class="c-search row align-left">
     <div class="column small-2">
       <dropdown-component :items="filters"></dropdown-component>
     </div>
-    <div class="column small-6">
-      <input type="search" placeholder="Search for data..." class="search-bar">
+    <div class="column small-8">
+      <div class="search-bar">
+        <input type="search" v-model="query" placeholder="Search for data..." class="search-input">
+        <ul class="search-results-list">
+          <li v-for="result in results" class="search-results-item">{{result}}</li>
+        </ul>
+      </div>
     </div>
 </div>
+
+
