--- a/app/styles/_settings.scss
+++ b/app/styles/_settings.scss
@@ -7,6 +7,7 @@ $dark-grey: #2F2F2F;
 $gold-yellow: #EFA600;
 $lightgrey: #F3F3F3;
 $grey: grey;
+$medium-grey: #E8E8E8;
 
 // Fonts
 $heading-font-family: "bebas-neue", sans-serif;
@@ -48,6 +49,8 @@ $button-font-color: $theme-base;
 
 // Borders
 $border-1: solid 1px #e0e0e0;
+$box-shadow-1: 0 2px 1px 0 rgba(0, 0, 0, 0.17);
+
 // Links and Buttons
 $link-font-color: $gold-yellow;
 
