--- a/app/scripts/components/Search/search-style.scss
+++ b/app/scripts/components/Search/search-style.scss
@@ -20,20 +20,23 @@
 
     .search-results-list {
       width: 100%;
+      max-height: 221px;
       margin: 0;
       padding: 0;
       border-radius: 0 0 2px 2px;
+      box-shadow: $box-shadow-1;
 
-      background-color: $lightgrey;
+      background-color: $medium-grey;
 
       list-style: none;
       cursor: pointer;
+      overflow: overlay;
 
       .search-results-item {
-        padding:  0 $small-margin;
+        padding:  $small-margin / 2 $medium-margin;
 
         &:hover {
-          background-color: grey;
+          background-color: $lightgrey;
         }
       }
     }
