--- a/app/scripts/components/Search/search-template.html
+++ b/app/scripts/components/Search/search-template.html
@@ -7,9 +7,9 @@
         <input type="search" v-model="queryState" placeholder="Search for data..." class="search-input">
         <ul class="search-results-list">
           <li v-if="loading" class="search-results-item">{{loadingMessage}}</li>
-          <li v-else-if="error" class="search-results-item">{{errorMessage}}</li>
+          <li v-else-if="error" class="search-results-item -error">{{errorMessage}}</li>
           <li v-else-if="notFound" class="search-results-item">{{notFoundMessage}}</li>
-          <li v-else-if="query" v-for="result in results" class="search-results-item">{{result.attributes.name}}</li>
+          <li v-else-if="query" v-for="result in results" class="search-results-item -item">{{result.attributes.name}}</li>
         </ul>
       </div>
     </div>
