work in progress

--- a/app/scripts/components/Playground/playground-style.scss
+++ b/app/scripts/components/Playground/playground-style.scss
@@ -3,4 +3,12 @@
 
 .c-playground {
 
+  .featured-list {
+
+    .featured-list-item {
+      h1 {
+        text-transform: none;
+      }
+    }
+  }
 }
