--- a/app/scripts/components/Playground/playground-template.html
+++ b/app/scripts/components/Playground/playground-template.html
@@ -1,5 +1,10 @@
 <div class="c-playground">
     <article-component>
       <h1 class="-left">Featured Datasets</h1>
+      <div class="featured-list">
+        <div class="column small-6 medium-4 featured-list-item">
+          <h4>Worldbank Poverty Index</h4>
+        </div>
+      </div>
     </article-component>
 </div>
