--- a/app/scripts/components/Home/home-template.html
+++ b/app/scripts/components/Home/home-template.html
@@ -82,7 +82,7 @@
     <swiper-component :slides="twitterSlides">
       <swipe-item v-for="tweet in twitterSlides">
         <div class="tweet">
-          <h4>What our clients have to say</h4>
+          <h4 class="-center -uppercase">What our clients have to say</h4>
           <p class="tweet-message">{{tweet.message}}</p>
           <div class="tweet-user">
             <span class="tweet-user-tag">Twitter user:</span>
@@ -95,7 +95,7 @@
 
   <article-component class="-complementary">
     <h1>Partnership</h1>
-    <h4 class="-light -center">
+    <h4 class="-light -center -uppercase">
       150+ partners, providing expertise, data, technology,
       science to meet the data needs of the SDGs. Here they are.
     </h4>
