debounce search bar + featured datasets loaded

--- a/app/styles/_base.scss
+++ b/app/styles/_base.scss
@@ -82,6 +82,7 @@ a {
   text-transform: uppercase;
   font-size: $font-size-xsmall;
   font-weight: $font-weight-bold;
+  cursor: pointer;
 }
 
 nav > ul {
