--- a/app/scripts/components/Dataset/dataset-template.html
+++ b/app/scripts/components/Dataset/dataset-template.html
@@ -1,7 +1,7 @@
 <div class="c-dataset">
   <h4 class="-left dataset-header">{{name}}</h4>
   <div class="dataset-detail">
-    <a>{{source}}</a>
+    <a>{{source || 'Link'}}</a>
     <div class="dataset-badge">
       <div class="dataset-badge-item">Goal {{goal}}</div>
       <div class="dataset-badge-item">Target {{target}}</div>
