--- a/app/scripts/components/Playground/playground-template.html
+++ b/app/scripts/components/Playground/playground-template.html
@@ -1,10 +1,6 @@
 <div class="c-playground">
-    <article-component>
-      <h1 class="-left">Featured Datasets</h1>
-      <div class="featured-list row align-justify">
-        <div class="column small-12 medium-6 large-4 featured-list-item" v-for="n in 12">
-          <dataset-component></dataset-component>
-        </div>
-      </div>
-    </article-component>
+  <article-component>
+    <h1 class="-left">Featured Datasets</h1>
+    <dataset-list-component :datasets="featuredDatasets"></dataset-list-component>
+  </article-component>
 </div>
