work in progress

--- a/app/scripts/components/Home/home-template.html
+++ b/app/scripts/components/Home/home-template.html
@@ -5,7 +5,7 @@
 
     <div class="row">
       <div class="column small-12 medium-6 large-4 info-column">
-        <icon-component class="-normal -base" name="icon-data"></icon-component>
+        <icon-component class="-round -small -base" name="icon-data"></icon-component>
         <div class="info-column-text">
           <h3>Improve the effective use of data.</h3>
           <p>
@@ -16,7 +16,7 @@
       </div>
 
       <div class="column small-12 medium-6 large-4 info-column">
-        <icon-component class="-normal -base" name="icon-group"></icon-component>
+        <icon-component class="-round -small -base" name="icon-group"></icon-component>
         <div class="info-column-text">
           <h3>Increase openness and leverage of existing data.</h3>
           <p>Focus on Lorem ipsum sit amet dolor finius
@@ -25,7 +25,7 @@
       </div>
 
       <div class="column small-12 medium-6 large-4 info-column">
-        <icon-component class="-normal -base" name="icon-tools"></icon-component>
+        <icon-component class="-round -small -base" name="icon-tools"></icon-component>
         <div class="info-column-text">
         <h3>Visualize your Data towards your brand.</h3>
         <p>Focus on Lorem ipsum sit amet dolor finius
