--- a/app/styles/_settings.scss
+++ b/app/styles/_settings.scss
@@ -50,6 +50,7 @@ $button-font-color: $theme-base;
 // Borders
 $border-1: solid 1px #e0e0e0;
 $box-shadow-1: 0 2px 1px 0 rgba(0, 0, 0, 0.17);
+$box-shadow-2: 0 2px 2px 0 rgba(0, 0, 0, 0.2);
 
 // Links and Buttons
 $link-font-color: $gold-yellow;
