work in progress

--- a/app/scripts/components/Playground/playground-template.html
+++ b/app/scripts/components/Playground/playground-template.html
@@ -3,5 +3,11 @@
     <h1 class="-left">Featured Datasets</h1>
     <dataset-list-component :datasets="featuredDatasets"></dataset-list-component>
   </article-component>
-  <modal-component></modal-component>
+  <modal-component>
+    <div class="row expanded">
+      <div class="column small-10 align-middle flex">
+        <dataset-component  name="WRI" source="LINK" :goal="1" :target="3" large></dataset-component>
+      </div>
+    </div>
+  </modal-component>
 </div>
