--- a/app/scripts/components/Modal/modal-template.html
+++ b/app/scripts/components/Modal/modal-template.html
@@ -1,15 +1,8 @@
 <div class="c-modal">
   <div class="row align-center">
     <div class="modal-content column small-12">
-
-      <div class="row expanded">
-        <div class="column small-10 align-middle flex">
-          <dataset-component  name="WRI" source="LINK" :goal="1" :target="3" large></dataset-component>
-        </div>
-        <div class="column small-2 flex align-top align-right">
-          <icon-component name="icon-close" class="-medium -complementary -action close-modal"></icon-component>
-        </div>
-      </div>
+      <icon-component name="icon-close" class="-medium -complementary -action close-modal"></icon-component>
+      <slot></slot>
     </div>
   </div>
 </div>
